--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -11,5 +11,5 @@
   <br />
   <br />
   <%= content_tag :p, 'New user?' %>
-  <%= link_to 'Sign up.', signup_users_path, :class => 'btn btn-secondary' %>
+  <%= link_to 'Sign up', signup_users_path, :class => 'btn btn-secondary' %>
 <% end %>
